--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ springdoc.swagger-ui.path=/project/api/swagger-ui.html
 springdoc.api-docs.path=/project/api/docs
 server.error.include-message=always
 #JDBC PROPERTIES
-spring.datasource.url=jdbc:postgresql://localhost:5432/project
+spring.datasource.url=jdbc:postgresql://localhost:5432/texnologies_nefous
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #JPA PROPERTIES
